# Advent-of-Code

./: .gitignore  .prettierrc  Cargo.toml  colors.ts  new.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
2022/: day04.test.ts  day04.ts  day05.test.ts  day05.ts  day07.test.ts  day07.ts  day09.ts  day10.test.ts  day11.ts  day12.test.ts  day12.ts  day13.test.ts  day13.ts  day17.test.ts  day18.ts  day21.test.ts  day22.ts  day23.test.ts  day23.ts  day24.ts  day25.input.txt  day25.test.ts
2023/: day01.test.ts  day01.ts  day02.test.ts  day02.ts  day03.test.ts  day03.ts  day04.test.ts  day04.ts  day05.input.txt  day05.test.ts  day05.ts  day06.input.txt  day06.test.ts  day06.ts  day07.test.ts  day07.ts  day08.input.txt  day08.test.ts  day08.ts  day09.test.ts  day09.ts  day10.input.txt  day10.test.ts  day10.ts  day11.test.ts  day11.ts  day12.test.ts  day12.ts  day13.test.ts  day13.ts  day14.test.ts  day14.ts  day15.input.txt  day15.test.ts  day15.ts  day16.test.ts  day16.ts  day17.input.txt  day17.test.ts  day17.ts  (+18 more)
2024/: day01.test.ts  day01.ts  day02.test.ts  day02.ts  day03.test.ts  day03.ts  day04.test.ts  day04.ts  day05.test.ts  day05.ts  day06.test.ts  day06.ts  day07.test.ts  day07.ts  day08.test.ts  day08.ts  day09.test.ts  day09.ts  day10.test.ts  day10.ts  day11.test.ts  day11.ts  day12.test.ts  day12.ts  day13.test.ts  day13.ts  day14.test.ts  day14.ts  day15.test.ts  day15.ts  day16.test.ts  day16.ts  day17.test.ts  day17.ts  day18.test.ts  day18.ts  day19.test.ts  day19.ts  day20.test.ts  day20.ts  (+2 more)
2025/: day01.rs  day01.test.ts  day01.ts  (+25 more)
(+101 files in other folders)
