[package]
name = "Advent-of-Code"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "1"
path = "2025/day01.rs"

[[bin]]
name = "2"
path = "2025/day02.rs"

[[bin]]
name = "3"
path = "2025/day03.rs"

[[bin]]
name = "4"
path = "2025/day04.rs"

[[bin]]
name = "5"
path = "2025/day05.rs"

[[bin]]
name = "6"
path = "2025/day06.rs"
